--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,7 @@
     </ul>
   </div>
   <div class="main">
-    <h1>Hello!</h1>
+    <h1>Projects</h1>
     <p>Normal</p>
+    <p><a href='https://www.lingquery.github.io/linggen/'>LingGen</a></p>
 </body>
