--- a/projects.html
+++ b/projects.html
@@ -13,9 +13,9 @@
   <div class="top">
     <ul class="menu">
       <li><a href="/">Home</a></li>
-      <li><a href="summaries.html">Summaries</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="summaries">Summaries</a></li>
+      <li><a href="projects">Projects</a></li>
+      <li><a href="contact">Contact</a></li>
     </ul>
   </div>
   <div class="main">
