--- a/projects.html
+++ b/projects.html
@@ -21,5 +21,5 @@
   <div class="main">
     <h1>Projects</h1>
     <p>Normal</p>
-    <p><a href='https://lingquery.github.io/linggen/'>LingGen</a></p>
+    <p><a href='https://lingquery.github.io/LingGen/'>LingGen</a></p>
 </body>
