--- a/summaries.html
+++ b/summaries.html
@@ -7,15 +7,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Josefin+Sans:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
   <div class="top">
     <ul class="menu">
       <li><a href="/">Home</a></li>
-      <li><a href="summaries.html">Summaries</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="summaries">Summaries</a></li>
+      <li><a href="projects">Projects</a></li>
+      <li><a href="contact">Contact</a></li>
     </ul>
   </div>
   <div class="main">
